# GPU_3DMap

./: README.MD  README.md  freespace.txt  octree_nodes.txt  result_map_key_generation.txt
src/class_example/: CMakeLists.txt  package.xml
src/class_example/include/class_example/: Color3DPoint.h
src/class_example/src/: Color3DPoint.cpp  simple_test.cpp
src/cpp_examples/: a.out  circular_pointers.cpp  free_space_test.cpp  memory_free_test.cpp  pointers_example1.cpp  pointers_example2.cpp  pointers_example3.cpp  pointers_example4.cpp  pointers_example5.cpp  pointers_example6.cpp  pointers_example7.cpp  pointers_example8.cpp  pointers_example9.cpp  two_pointers.cpp
src/cuda_example/: CMakeLists.txt  package.xml
src/cuda_example/src/compare/: compare.cu  main.cpp
src/cuda_example/src/hello_world/: helloworld.cu  main.cpp
src/cuda_example/src/kernels/: kernels.cu  main.cpp
src/cuda_example/src/simple_addition/: main.cpp  simple_addition.cu
src/cuda_example/src/vector_addition/: vector_addition.cu
src/map_builder/: CMakeLists.txt  package.xml
src/map_builder/src/cuda_with_octree_parallel/: README.MD  devel.cpp  devel.cu  serial.cu
src/map_builder/src/development_node/: BST.cpp  ColorOctree.cpp  Octree.cpp  a.out  dataset_creation.cpp  kinect_ful_res.cu  kinect_full_res.cpp  morton_code_generator.cpp  octree_nodes.txt  publish_point_cloud2.cpp  temp.cpp  temp.cu
src/map_builder/src/final_dynamic/: map_builder.cpp  parallel.cu  serial.cu
src/map_builder/src/final_static/: map_builder.cpp  parallel.cu  serial.cu
src/map_builder/src/mc_raycast/: map_builder.cpp  parallel.cu  serial.cu
src/map_builder/src/mc_static/: README.MD  map_builder.cpp  parallel.cu  serial.cu
src/map_builder/src/multires_dynamic/: README.MD  map_builder.cpp  parallel.cu  serial.cu
src/map_builder/src/multires_raycast/: README.MD  map_builder.cpp  parallel.cu  serial.cu
src/map_builder/src/multires_static/: README.MD  map_builder.cpp  parallel.cu  serial.cu
src/map_builder/src/parallel_dynamic_model/: README.MD  dynamic_parallel.cpp  dynamic_parallel.cu  serial.cu
src/map_builder/src/parallel_freespace_map/: README.MD  freespace.cpp  freespace.cu
src/map_builder/src/parallel_map_build/: parallel.cpp  parallel.cu
src/map_builder/src/roscuda_pointers/: main.cpp  template.cu
src/map_builder/src/serial_freespace_map/: README.MD  freespace.cpp  freespace.cu
src/map_builder/src/serial_map_build/: bresenham_3d.cpp  serial.cpp  serial.cu
src/map_builder/src/testing/algo_comparison/: comparison.cpp  comparison.cu
src/map_builder/src/testing/evaluator/: dynamic_parallel.cu  dynamic_serial.cu  map_builder.cpp  static_parallel.cu  static_serial.cu
src/testworld_gazebo/launch/: drive_turtlebot.launch  testworld.launch
src/testworld_gazebo/worlds/: camera_test.xml  demo_world.xml  indoor_10_10.xml  model.xml  paper.xml
